[gd_scene load_steps=13 format=3 uid="uid://rurpqbks4x0h"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_4ljl2"]
[ext_resource type="Texture2D" uid="uid://dywb4ubvd37xh" path="res://Assets/Enviroment/background-test-1.png" id="2_b7p6g"]
[ext_resource type="PackedScene" uid="uid://bhsfhj5dd74di" path="res://Scenes/moving_camera.tscn" id="3_txgtj"]
[ext_resource type="PackedScene" uid="uid://b1mmlpyqvrekr" path="res://Scenes/pause_menu.tscn" id="8_eqtw5"]
[ext_resource type="PackedScene" path="res://Scenes/hud.tscn" id="9_djmc6"]
[ext_resource type="AudioStream" uid="uid://3310wmtmuyao" path="res://Assets/Audio/Music/main theme v3.mp3" id="10_cus3j"]
[ext_resource type="Script" path="res://Scripts/collectable_manager.gd" id="11_u6yix"]
[ext_resource type="PackedScene" path="res://Scenes/player_stat_handler.tscn" id="12_mnqhk"]
[ext_resource type="PackedScene" uid="uid://yx8ru4t7xdym" path="res://Scenes/Player.tscn" id="13_2gjuy"]
[ext_resource type="PackedScene" path="res://Scenes/base_collectable.tscn" id="14_ihhcx"]
[ext_resource type="Resource" uid="uid://5wjdm2scraa5" path="res://Scenes/Resources/Pie.tres" id="16_q1o2t"]
[ext_resource type="PackedScene" uid="uid://ds3l4cta60sk3" path="res://Scenes/npcs.tscn" id="17_1vsmg"]

[node name="World" type="Node2D"]
script = ExtResource("1_4ljl2")
metadata/_edit_lock_ = true

[node name="Enviroment" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Enviroment"]
position = Vector2(321, 240)
texture = ExtResource("2_b7p6g")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(321, 240)

[node name="MovingCamera" parent="." node_paths=PackedStringArray("cam_paths") instance=ExtResource("3_txgtj")]
cam_paths = [null, null, null]

[node name="ui_container" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="ui_container" instance=ExtResource("8_eqtw5")]
visible = false
offset_left = 208.0
offset_top = 140.0
offset_right = 208.0
offset_bottom = 140.0
scale = Vector2(3.20148, 3.20148)

[node name="HUD" parent="ui_container" instance=ExtResource("9_djmc6")]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_cus3j")

[node name="ManagerContainer" type="Node" parent="."]

[node name="CollectableManager" type="Node" parent="ManagerContainer"]
script = ExtResource("11_u6yix")

[node name="PlayerStatHandler" parent="ManagerContainer" instance=ExtResource("12_mnqhk")]

[node name="EntityContainer" type="Node2D" parent="."]

[node name="Player" parent="EntityContainer" instance=ExtResource("13_2gjuy")]
position = Vector2(58, 407)

[node name="BaseCollectable" parent="EntityContainer" instance=ExtResource("14_ihhcx")]
position = Vector2(80, 262)

[node name="BaseCollectable2" parent="EntityContainer" instance=ExtResource("14_ihhcx")]
position = Vector2(395, 107)
collectable_resource = ExtResource("16_q1o2t")

[node name="BaseCollectable3" parent="EntityContainer" instance=ExtResource("14_ihhcx")]
position = Vector2(553, 273)

[node name="Npcs" parent="." instance=ExtResource("17_1vsmg")]

[node name="Path3" parent="Npcs/Paths" index="2"]
position = Vector2(-10, -7)

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]

[editable path="Npcs"]
[editable path="Npcs/Paths/Path1"]
[editable path="Npcs/Paths/Path2"]
[editable path="Npcs/Paths/Path3"]
[editable path="Npcs/Paths/Path4"]
[editable path="Npcs/Paths/Path5"]
[editable path="Npcs/Paths/Path6"]
[editable path="Npcs/Paths/Path7"]
[editable path="Npcs/Paths/Path8"]
[editable path="Npcs/Paths/Path9"]
[editable path="Npcs/Paths/Path10"]
[editable path="Npcs/Paths/Path11"]
[editable path="Npcs/Paths/Path12"]
[editable path="Npcs/Paths/Path13"]
[editable path="Npcs/Paths/Path14"]
[editable path="Npcs/Paths/Path15"]
[editable path="Npcs/Paths/Path16"]
[editable path="Npcs/Paths/Path17"]
[editable path="Npcs/Paths/Path18"]
[editable path="Npcs/Paths/Path19"]
[editable path="Npcs/Paths/Path20"]
